Fix mobile title alignment and force content refresh

--- a/style.css
+++ b/style.css
@@ -93,9 +93,9 @@ ul {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     position: relative;
-    display: inline-block;
-    left: 50%;
-    transform: translateX(-50%);
+    display: block;
+    width: fit-content;
+    margin: 0 auto 3rem auto;
 }
 
 .section-title::after {
